Stop each circuit iteration spilling onto two lines in certain months

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,7 +56,11 @@ div, nav { @include box-sizing(border-box); }
 
     //#iterationsContainer { margin-left: 5px; }
 
-    #navIterations { margin-left: 10px; }
+    #navIterations {
+      margin-left: 10px;
+      
+      a { font-size: 0.9em; }
+    }
   }
 
   #content {
